@@ -23,6 +23,8 @@ Version 1.9.1
 - BUG: ProjectMonitor could not show any log messages if
        HEAD was more than log-limit above the corresponding
        log messages to show. (Stefan)
+- BUG: Stopping the monitoring thread failed when trying
+       to show the log. (Stefan)
 
 Version 1.9.0
 See the release notes here:
